# Pane-Vortex-v2

./: .gitignore  CLAUDE.local.md  CLAUDE.md  Cargo.toml  README.md  bacon.toml
.claude/: anti_patterns.json  context.json  patterns.json  status.json
.claude/queries/: bus_tasks.sql  field_state.sql  governance.sql
.claude/schemas/: bus_event.schema.json  bus_frame.schema.json
.obsidian/: app.json
ai_docs/: ARCHITECTURE_DEEP_DIVE.md  ERROR_TAXONOMY.md  FLEET_HOOK_WIRING.md  INDEX.md  ONBOARDING.md  SCHEMATICS.md  SCHEMATICS_FIELD_AND_GOVERNANCE.md  SIDECAR_FEATURES_RESEARCH.md  scratchpad.md
ai_docs/modules/: L1_FOUNDATION.md  L4_COUPLING.md  L5_LEARNING.md  L6_BRIDGES.md  L7_COORDINATION.md
ai_specs/: CONSENT_SPEC.md  DATABASE_SPEC.md  DESIGN_CONSTRAINTS.md  EVENT_SYSTEM_SPEC.md  TASK_QUEUE_SPEC.md  WIRE_PROTOCOL_SPEC.md
ai_specs/layers/: L2_SERVICES_SPEC.md  L3_FIELD_SPEC.md  L5_LEARNING_SPEC.md  L7_COORDINATION_SPEC.md  L8_GOVERNANCE_SPEC.md
ai_specs/patterns/: ANTIPATTERNS.md  INDEX.md  (+1 more)
benches/: tick_loop.rs
claude-code-env/: pyvenv.cfg
config/: default.toml  production.toml
hooks/: post_tool_nexus_pattern.sh  post_tool_povm_pathway.sh  post_tool_use.sh  pre_tool_thermal_gate.sh  session_end.sh  session_start.sh  subagent_field_aggregate.sh  user_prompt_field_inject.sh
migrations/: 001_field_tables.sql  002_bus_tables.sql  003_governance_tables.sql
scripts/: fleet-verify.sh  task-submit.sh  verify-scaffold.sh
src/: lib.rs
tests/: bridge_integration.rs  cross_layer_workflows.rs  l1_foundation_integration.rs  l3_field_integration.rs  l7_coordination_integration.rs  l8_governance_integration.rs
vault/: API_SPEC.md  ASYNC_PATTERNS.md  CHANGELOG.md  CLAUDE.local.md  CODE_MODULE_MAP.md  CONCURRENCY_PATTERNS.md  Commands.md  Consent Flow Analysis.md  DEPLOYMENT_GUIDE.md  ERROR_PATTERNS.md  FLEET_COORDINATION_SPEC.md  Fleet-Bridge-Topology.md  Fleet-Governance-Field.md  Fleet-ME-Emergence.md  Fleet-ME-Governance.md  Fleet-ME-Service-Health.md  Fleet-POVM-Deep-Dive.md  Fleet-POVM-Health.md  Fleet-SYNTHEX-Thermal.md  Fleet-System-Summary.md  Fleet-Verify-Report.md  GAP-1 Fix — Governance Actuator.md  HOME.md  Hebbian Learning Deep Dive.md  INDEX.md  IPC Bus Architecture Deep Dive.md  IPC_BUS_SPEC.md  IPC_PATTERNS.md  KURAMOTO_FIELD_SPEC.md  L1_FOUNDATION_SPEC.md  L2_SERVICES.md  L3_FIELD.md  L4_COUPLING_SPEC.md  L6_BRIDGES_SPEC.md  L8_GOVERNANCE.md  MASTER INDEX.md  MASTERPLAN.md  MESSAGE_FLOWS.md  MODULE_MATRIX.md  Newly created clude code slash commands.md  (+147 more)
(+180 files in other folders)
